--- a/Draw/Dice/View/PopupView/ChatView.xib
+++ b/Draw/Dice/View/PopupView/ChatView.xib
@@ -41,8 +41,9 @@
 					<object class="IBUIImageView" id="60567703">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 11}, {243, 260}}</string>
+						<string key="NSFrame">{{10, 11}, {243, 265}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1009680257"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -53,9 +54,10 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{21, 19}, {222, 35}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="381758895"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="200057605">
+						<object class="NSColor" key="IBUIBackgroundColor" id="800991718">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -69,10 +71,11 @@
 					<object class="IBUITableView" id="381758895">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{21, 56}, {222, 207}}</string>
+						<string key="NSFrame">{{21, 59}, {222, 210}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<reference key="IBUIBackgroundColor" ref="200057605"/>
+						<reference key="IBUIBackgroundColor" ref="800991718"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
@@ -82,11 +85,12 @@
 						<float key="IBUISectionHeaderHeight">22</float>
 						<float key="IBUISectionFooterHeight">22</float>
 					</object>
-					<object class="IBUIButton" id="725473986">
+					<object class="IBUIButton" id="298656072">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{237, 0}, {25, 25}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -120,11 +124,12 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{262, 272}</string>
+				<string key="NSFrameSize">{262, 276}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="60567703"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="200057605"/>
+				<reference key="IBUIBackgroundColor" ref="800991718"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -181,7 +186,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickCloseButton:</string>
-						<reference key="source" ref="725473986"/>
+						<reference key="source" ref="298656072"/>
 						<reference key="destination" ref="1009307457"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -214,7 +219,7 @@
 							<reference ref="1009680257"/>
 							<reference ref="381758895"/>
 							<reference ref="60567703"/>
-							<reference ref="725473986"/>
+							<reference ref="298656072"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -236,7 +241,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="725473986"/>
+						<reference key="object" ref="298656072"/>
 						<reference key="parent" ref="1009307457"/>
 					</object>
 				</array>
@@ -259,7 +264,53 @@
 			<nil key="sourceID"/>
 			<int key="maxID">16</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ChatView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bgImageView">UIImageView</string>
+						<string key="expressionsHolderView">UIScrollView</string>
+						<string key="messagesHolderView">UITableView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="expressionsHolderView">
+							<string key="name">expressionsHolderView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="messagesHolderView">
+							<string key="name">messagesHolderView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ChatView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontButton</string>
+					<string key="superclassName">UIGlossyButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
